<resources>
    <string name="app_name">Game of Life Android</string>
    <string name="title_activity_save">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save">SAVE</string>
    <string name="play_one_turn">play one turn</string>
    <string name="edit">edit</string>
    <string name="zoom_in">zoom in</string>
    <string name="open_save_menu">open save menu</string>
    <string name="auto_play">auto play</string>
    <string name="pan">pan</string>
    <string name="zoom_out">zoom out</string>
    <string name="random_auto_fill">random auto fill</string>
    <string name="name_your_save_here">Name your save here...</string>
    <string name="save_load">save/load</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="saved_on">Saved on %s</string>
    <string name="settings_autoplay_speed_information">Choose a value between 1 and 10 from the dropdown menu where 1 is the slowest and 10 is the fastest. This determines how fast turns are taken while auto play is enabled.</string>
    <string name="auto_play_speed">Auto play speed</string>
    <string name="random_fill_probability">Random fill probability</string>
    <string name="settings_random_fill_help">This setting determines how likely a given square in the board is to be filled when the random fill button is pressed. A lower probability corresponds to a board with fewer alive squares after being randomly filled.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="controls">Controls</string>
    <string name="board">Board</string>
    <string name="color">Color</string>
    <string name="board_size">Board size</string>
    <string name="board_width">Board width:</string>
    <string name="board_height">Board height:</string>
    <string name="board_wrapping">Board wrapping</string>
    <string name="board_size_settings_help">Enter numbers between 1 and 500 to determine how many squares tall and wide the board is.</string>
    <string name="board_wrapping_settings_help">If horizontal wrapping is enabled, the left side of the board is connected to the right side of the board. If vertical wrapping is enabled, the top of the board is connected to the bottom of the board.</string>
    <string name="max_width_height">500</string>
    <string name="horizontal_wrapping">Horizontal wrapping</string>
    <string name="vertical_wrapping">Vertical wrapping</string>
    <string name="background">Background</string>
    <string name="alive_square">Alive square</string>
    <string name="dead_square">Dead square</string>
    <string name="gridlines">Grid lines</string>
    <string name="color_settings_warning">Make sure each color is distinct.</string>
    <string name="warning_sign">Warning sign</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="reset_colors_to_default">Reset colors to default</string>
    <string name="are_you_sure">Are you sure?!</string>
    <string name="pressing_yes_will_delete_the_save">Pressing yes will delete the save named %1$s. Click no to keep the save.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="a_save_named_was_deleted">A save named %1$s was deleted.</string>
    <string name="you_must_enter_a_name_for_your_save">You must enter a name for your save.</string>
    <string name="pressing_yes_will_reset_the_colors">Pressing yes will reset the colors to their defaults. Click no to keep the current colors.</string>
    <string name="the_colors_were_reset_to_their_defaults">The colors were reset to their defaults.</string>
    <string name="type_a_whole_number_between_and">Type a whole number between %1$d and %2$d, inclusive.</string>
    <string name="the_board_was_erased_because_the_probability">Board erased because fill probability is 0%. See the settings menu.</string>
    <string name="play_button_help_text">Press this button to advance the state of the board by one turn.</string>
    <string name="auto_play_button_help_text">Press this button to toggle auto play where the state of the board is automatically progressed while active. To turn off auto play press the button a second time. The speed of auto play can be changed in the settings menu.</string>
    <string name="edit_button_help_text">Press this button to enable edit mode. In edit mode, pressing on the grid toggles a gird square. You can also press and drag to easily toggle many grid squares. Holding this button will enable you to clear the board.</string>
    <string name="pan_button_help_text">Press this button to enable panning mode. In panning mode, pressing and draggin the grid will move it around.</string>
    <string name="zoom_in_button_help_text">Press this button to zoom into the grid. At a certain point you will not be able to zoom in any further.</string>
    <string name="zoom_out_button_help_text">Press this button to zoom out from the grid. At a certain point you will not be able to zoom out any further.</string>
    <string name="save_button_help_text">Press this button to open the save and load menu where you can save the current state of the board and load saves you\'ve already made.</string>
    <string name="random_fill_button_help_text">Press this button to randomly fill the board. The probability of activating each square in the board can be changed in the settings menu.</string>
    <string name="what_is_conway_s_game_of_life">What is Conway\'s game of life?</string>
    <string name="what_was_the_intent_of_the_game">What was the intent of the game?</string>
    <string name="what_are_the_rules">What are the rules?</string>
    <string name="what_should_i_do_with_this_app">What should I do with this app?</string>
    <string name="what_is_question_answer">Conway\'s game of life was invented by the late mathematician John Conway in 1970. It is a game in the technical sense, in that it has rules, and evolves over a series of turns, but it has no players. The future state of the game is entirely determined by how the board is initially configured. Each turn, (simple) rules are applied to each square in the grid to determine whether that square is \'alive\' or \'dead\' the next turn, based on whether the square is \'alive\' or \'dead\' and based on how many of the neighboring squares are alive or dead. But despite the simple setup of this game, complex behavior can still arise.</string>
    <string name="what_are_question_answer">Each square in the grid can either be \'dead\' or \'alive.\' By default, in this app, a white square is dead and a blue square is alive. Each grid square has up to 8 neighboring grid squares. A grid square that is alive in one turn will stay alive in the next turn if 2 or 3 of the neighboring grid squares are also alive. Any less, or any more, and the alive grid square will die the next turn. A dead grid square can become alive if exactly 3 of its neighbors are alive. Any more, or any less, and the dead grid square will stay dead.</string>
    <string name="what_should_question_answer">The main goal is to explore and have fun. First, put the board in the edit state by clicking the pencil icon. Then, press on the board to activate squares (make them alive.) Then hit the play button to advance the state of the board one turn and see how it evolves. Play around with different initial configurations. You can also press the randomize button (looks like a die) to randomly fill the board with alive squares. Then hit play or autoplay to see how it evolves over a few turns. Keep auto-playing until the board settles. Notice any structures that did not die out completely? These are stable structures. They will either keep repeating or stay the same, forever. You can even edit the board while it is auto-playing. It can be fun to start by randomizing the board and then using the edit tool while it is auto-playing to see how you can alter things.\n\nAlso, try searching online for the game of life and looking up interesting structures, such as the glider, and others. You can save your board state and load ones you have already saved. If you spend time setting up a board state, consider saving it before hitting play so that you can easily get back to that state should you want to. You can also go into the settings and play with things like autoplay speed, the board size, randomization probability, colors, and more. If you want a better look at the board press the minus button to zoom out, and if you want it to be easier to edit, zoom in with the plus button. Holding the edit button will clear the board, and the panning button will allow you to move the board around. You can pan and zoom the board while autoplay is active.</string>
    <string name="what_was_question_answer">The intent of the game was to explore how complexity on a large scale (the entire board) arises from simple rules applied on a small scale (the rules for how each square live or die.) There are many analogous situations in nature, where simple elements come together to form complex structures. Compare a cell to the human body, for example. Or, observe that a school of fish can act with apparent intelligence despite their being no communication between the fish in the school, other than that each fish tries to stay a fixed distance from the neighboring fish.</string>
    <string name="life">LIFE</string>
    <string name="game_of">John Conway\'s game of</string>
    <string name="save_file_name">Save file name</string>
    <string name="file_created_07_03_2020_1_09pm">File created 07/03/2020 1:09PM</string>
    <string name="delete_save_button">delete save button</string>
</resources>
